			   XPCE ChangeLog
			   ==============

* ADDED: library(persistent_frame) defining a class with the same name that
  realises a frame remembering its position, size and subwindow layout.  Use
  this class for (part of) the development environment tools.

* FIXED: May issues around frame<->geometry.  At least on the X11 version,
  <->geometry now queries and restores the geometry correctly.

* MODIFIED/FIXED: `frame<-bounding_box' to return the true position of the
  frame rather then just the size, making this method more suitable for
  screen layout arithmetic.  Related and improved documentation of frame
  geometry-management methods.  Fixed PostScript code to deal with the
  changed interface.

* FIXED: If there is a default button in a dialog, give it the keyboard
  focus instead of giving it to another button (Christophe Costa Florencio).

* FIXED: Avoid missing dash-pattern definition generating PostScript from
  text objects with a pixmap <-background.

* FIXED: X11 image export to gif, jpeg, pnm and PostScript for all visual
  types (tested using VNC in 8, 16, 24 and 32 bit mode).


VERSION 5.1.11, distributed with SWI-Prolog 4.1.0
=================================================

* ADDED/FIXED: X11: Saving images to PostScript on X-servers with more then
  16-bit colourdepth.  Reported by Lourens van der Meij.

* ADDED: PceEmacs: dialog-based find command.  The library can also be
  used with non-PceEmacs editor objects.

* ADDED: PceEmacs HTML mode: open_in_browser to open the current page
  in the user's browser.

* ADDED: PceEmacs: ->pce_define_class as new command to the Prolog mode
  First of more to come.

* ADDED: prolog_navigator/1 toplevel predicate.  Fixed module inclusion
  to make debugsettings work without PceEmacs or the GuiTracer loaded.
  Bound Prolog Navigator to Control-C Control-N in PceEmacs.

* FIXED: PceEmacs LaTeX mode: avoid loop looking for environment.

* PORT: Win32: Upgraded jpeg-support libraries to version 6b, providing